# InfiniTime

./: .gitignore  README.md  arm-clang-toolchain.cmake  function_pointer_translation_map.json  gcc_nrf52.ld  meson.build
src/: CMakeLists.txt
src/displayapp/screens/: Tile.cpp  Tile.h
